Open the network package to Jackson in order to allow for serialization
Not doing so can give some nasty behavior. More information:
https://github.com/unigrid-project/documentation-development/blob/master/JaxRS.md#a-word-of-warning-when-using-jackson--jersey