@@ -305,6 +305,7 @@
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=ALL-UNNAMED
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model.cdi=weld.core.impl
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model=info.picocli
+						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model.network=com.fasterxml.jackson.databind
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model.spork=com.fasterxml.jackson.databind
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model=com.fasterxml.jackson.databind
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model=org.unigrid.hedgehog.common
